# reddit-clawler

./: .gitignore  Cargo.toml  README.md
.github/workflows/: delete-workflow-runs.yml  publish-release.yml
src/: lib.rs  main.rs  reddit_parser.rs
src/cli/: mod.rs  run.rs
src/cli/commands/: mod.rs  search.rs  subreddit.rs  user.rs
src/clients/: mod.rs  reddit.rs  redgifs.rs
src/clients/api_types/reddit/: mod.rs  submitted_response.rs  user_about.rs
src/utils/: check_deps.rs  check_file_scheme.rs  download_progress.rs  downloader.rs  filesystem.rs  mod.rs  state.rs
tests/: parsers.rs
tests/mocks/reddit/submitted_response/: imgur_image.json  reddit_gallery.json  reddit_image.json  redgifs_image.json  redgifs_video.json  redgifs_video_iframe.json  template.json  youtube_video.json
tests/mocks/reddit/user_submitted_response/: reddit_video.json
