[package]
name = "reddit_clawler"
description = "Reddit media crawler"
version = "0.3.2"
edition = "2021"
license-file = "LICENSE.md"
keywords = ["reddit", "scraper", "crawler"]
categories = ["command-line-utilities", "scraper", "crawler"]

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.74"
bytes = "1.5.0"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.11", features = ["color", "derive"] }
filetime = "0.2.23"
indicatif = "0.17.7"
lazy_static = "1.4.0"
owo-colors = "4.0.0"
regex = "1.10.2"
reqwest = { version = "0.12.7", features = ["json"] }
reqwest-middleware = "0.3.3"
reqwest-retry = "0.6.1"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
spinoff = { version = "0.8.0", features = ["dots"] }
thiserror = "1.0.63"
tokio = { version = "1.39.3", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
pretty_assertions = "1.4.0"
